--- a/arch/arm/configs/lineageos-wt86518_defconfig
+++ b/arch/arm/configs/lineageos-wt86518_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.10.49 Kernel Configuration
+# Linux/arm 3.10.105 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -38,10 +38,12 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
 CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
+# CONFIG_KERNEL_LZ4 is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -133,8 +135,8 @@ CONFIG_NET_NS=y
 CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
-# CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_MM_OWNER=y
+# CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
@@ -143,6 +145,7 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
+# CONFIG_RD_LZ4 is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -272,6 +275,7 @@ CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -386,6 +390,7 @@ CONFIG_SENSORS_ADSP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_KRAIT_REGULATOR is not set
+# CONFIG_HAS_MACH_MEMUTILS is not set
 # CONFIG_PLAT_SPEAR is not set
 
 #
@@ -1107,7 +1112,7 @@ CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SWR=y
-# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
+CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
@@ -1196,6 +1201,7 @@ CONFIG_APDS9930=y
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
+# CONFIG_APANIC_MMC is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
@@ -1293,6 +1299,8 @@ CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
 CONFIG_NET_CORE=y
@@ -1595,7 +1603,7 @@ CONFIG_TOUCHSCREEN_FT5X06=y
 # CONFIG_TOUCHSCREEN_FT5X06_PSENSOR is not set
 # CONFIG_TOUCHSCREEN_FT5X06_GESTURE is not set
 # CONFIG_TOUCHSCREEN_HIMAX852XES is not set
-CONFIG_TOUCHSCREEN_MSTAR21XX=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
@@ -1698,7 +1706,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-# CONFIG_DEVMEM is not set 
+# CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 
 #
@@ -1794,6 +1802,7 @@ CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
+CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -1960,7 +1969,7 @@ CONFIG_QPNP_LINEAR_CHARGER=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 CONFIG_POWER_RESET_MSM=y
-# CONFIG_MSM_DLOAD_MODE we dont need this harshitjain6751@gmail.com 
+# CONFIG_MSM_DLOAD_MODE is not set
 # CONFIG_MSM_PRESERVE_MEM is not set
 # CONFIG_POWER_RESET_RESTART is not set
 # CONFIG_POWER_AVS is not set
@@ -3135,6 +3144,7 @@ CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
 # CONFIG_MACH_CKT is not set
 # CONFIG_MACH_CKT_MSM8939 is not set
 
@@ -3350,8 +3360,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_CORE_CTL_HELPER=y
 # CONFIG_MSM_CORE_CTL is not set
-CONFIG_MSM_PERFORMANCE=n
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=n
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
@@ -3383,6 +3392,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -3528,6 +3538,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_TURKISH is not set
 # CONFIG_NLS_UTF8 is not set
 # CONFIG_DLM is not set
+# CONFIG_RESTRICT_ROOTFS_SLAVE is not set
 
 #
 # Kernel hacking
@@ -3622,8 +3633,7 @@ CONFIG_RING_BUFFER_ALLOW_SWAP=y
 CONFIG_IPC_LOGGING=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
-CONFIG_TRACING_SUPPORT=y
-# CONFIG_FTRACE is not set
+# CONFIG_TRACING_SUPPORT is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_OOPS_LOG_BUFFER is not set
 # CONFIG_LOG_BUF_MAGIC is not set
@@ -3702,7 +3712,6 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
 # Authenticated Encryption with Associated Data
@@ -3746,6 +3755,7 @@ CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_SHA1=y
 # CONFIG_CRYPTO_SHA1_ARM is not set
 CONFIG_CRYPTO_SHA256=y
+# CONFIG_CRYPTO_SHA256_ARM is not set
 CONFIG_CRYPTO_SHA512=y
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
@@ -3829,6 +3839,9 @@ CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
 CONFIG_GENERIC_ALLOCATOR=y
+CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
+CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
