--- a/arch/arm/configs/lineageos_jalebi_defconfig
+++ b/arch/arm/configs/lineageos_jalebi_defconfig
@@ -628,6 +628,7 @@ CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # Networking options
