--- a/arch/arm64/configs/lineageos_lettuce_defconfig
+++ b/arch/arm64/configs/lineageos_lettuce_defconfig
@@ -449,6 +449,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # Networking options
