--- a/arch/arm/configs/lineageos-wt86518_defconfig
+++ b/arch/arm/configs/lineageos-wt86518_defconfig
@@ -3350,7 +3350,7 @@ CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-CONFIG_MSM_CORE_CTL_HELPER=y
+# CONFIG_MSM_CORE_CTL_HELPER is not set
 # CONFIG_MSM_CORE_CTL is not set
 # CONFIG_MSM_PERFORMANCE is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
