--- a/arch/arm/configs/lineageos_jalebi_defconfig
+++ b/arch/arm/configs/lineageos_jalebi_defconfig
@@ -273,6 +273,7 @@ CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
+CONFIG_IOSCHED_SWITCHER=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
