--- a/arch/arm64/configs/lineageos_lettuce_defconfig
+++ b/arch/arm64/configs/lineageos_lettuce_defconfig
@@ -258,6 +258,7 @@ CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
+CONFIG_IOSCHED_SWITCHER=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
