arch: arm/arm64: configs: Tweak various general configs
* Disable CONFIG_PFT as qualcomm recommends
* Enable CONFIG_RCU_BOOST as the device can gain performance
* Set CONFIG_RCU_BOOST_PRIO to 2 to reduce overhead

Credits: aviraxp forg guidance

--- a/arch/arm64/configs/lineageos_tomato_defconfig
+++ b/arch/arm64/configs/lineageos_tomato_defconfig
@@ -91,7 +91,9 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_PRIO=2
+CONFIG_RCU_BOOST_DELAY=500
 # CONFIG_RCU_NOCB_CPU is not set
 CONFIG_IKCONFIG=y
 # CONFIG_IKCONFIG_PROC is not set
@@ -3246,7 +3248,7 @@ CONFIG_MSM_AVTIMER=y
 # CONFIG_SSM is not set
 # CONFIG_MSM_MHI is not set
 # CONFIG_QCA1530 is not set
-CONFIG_PFT=y
+# CONFIG_PFT is not set
 # CONFIG_MSM_SPSS is not set
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
