--- a/arch/arm64/configs/lineageos_a6000-64_defconfig
+++ b/arch/arm64/configs/lineageos_a6000-64_defconfig
@@ -27,6 +27,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
+CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
